--- a/index.html
+++ b/index.html
@@ -1,10 +1,119 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>leslieins.github.io</title>
-    </head>
-    <body>
-        <h1>Hello World</h1>
-        <p>I'm hosted with GitHub Pages.</p>
-    </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Your Name | GitHub Portfolio</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f4f4;
+      color: #333;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #24292e;
+      color: white;
+      padding: 2rem 1rem;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
+    }
+    header p {
+      font-size: 1.2rem;
+      margin-top: 0.5rem;
+    }
+    section {
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+    }
+    h2 {
+      border-bottom: 2px solid #24292e;
+      padding-bottom: 0.5rem;
+    }
+    .skills, .projects {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
+    }
+    .skill, .project {
+      background: white;
+      padding: 1rem;
+      border-radius: 5px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      flex: 1 1 250px;
+    }
+    footer {
+      text-align: center;
+      padding: 1.5rem;
+      background-color: #24292e;
+      color: white;
+      margin-top: 3rem;
+    }
+    a {
+      color: #0366d6;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>Your Name</h1>
+    <p>Full Stack Developer | Open Source Enthusiast | Tech Blogger</p>
+    <p><a href="https://github.com/yourusername" target="_blank" style="color: #58a6ff;">github.com/yourusername</a></p>
+  </header>
+
+  <section>
+    <h2>About Me</h2>
+    <p>
+      I’m a software developer with a passion for open source, building scalable applications, and learning new technologies. 
+      I focus on clean, maintainable code and continuous learning.
+    </p>
+  </section>
+
+  <section>
+    <h2>Skills</h2>
+    <div class="skills">
+      <div class="skill">JavaScript / TypeScript</div>
+      <div class="skill">Python</div>
+      <div class="skill">React / Next.js</div>
+      <div class="skill">Node.js / Express</div>
+      <div class="skill">Git & GitHub</div>
+      <div class="skill">Docker</div>
+    </div>
+  </section>
+
+  <section>
+    <h2>Projects</h2>
+    <div class="projects">
+      <div class="project">
+        <h3><a href="https://github.com/yourusername/project1" target="_blank">Project One</a></h3>
+        <p>A web app for managing tasks built with React and Firebase.</p>
+      </div>
+      <div class="project">
+        <h3><a href="https://github.com/yourusername/project2" target="_blank">Project Two</a></h3>
+        <p>CLI tool written in Python to automate file organization.</p>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:you@example.com">you@example.com</a></p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">yourprofile</a></p>
+  </section>
+
+  <footer>
+    &copy; 2025 Your Name. Built with 💻 and ☕.
+  </footer>
+
+</body>
 </html>
